--- a/versions/v3/static/scss/_type.scss
+++ b/versions/v3/static/scss/_type.scss
@@ -23,6 +23,7 @@ p {
   font-style: italic;
   font-weight: normal;
   line-height: 90px;
+  margin: 0;
 
   @media (max-width: $screen-xs-max) {
     font-size: 30px;
