--- a/versions/v3/static/scss/_views-issue.scss
+++ b/versions/v3/static/scss/_views-issue.scss
@@ -6,143 +6,59 @@
   padding-top: 11px;
 
   .heading-wrap {
-    border-bottom: 1px solid #828282;
-    height: 25px;
-    margin-bottom: 25px;
-    margin-top: 10px;
-
-    @media (max-width: $screen-xs-max) {
-      height: auto;
-      margin-bottom: 15px;
-      overflow: hidden;
-    }
-
     h2 {
       @include font-smoothing();
-      background: #e5e5e5;
+      border-bottom: 1px solid #828282;
       color: #828282;
       display: block;
-      float: left;
       font-family: 'Gotham SSm 7r', 'Gotham SSm A', 'Gotham SSm B', sans-serif;
       font-size: 18px;
       font-weight: 700;
-      height: 100%;
       letter-spacing: -.03em;
-      line-height: 30px;
-      padding-right: 10px;
+      margin-bottom: 30px;
+      margin-top: 10px;
       position: relative;
-      top: 10px;
 
       @media (max-width: $screen-xs-max) {
-        line-height: 1.2em;
-        padding-bottom: 4px;
-        top: 0;
+        margin-bottom: 15px;
+        margin-top: 15px;
+      }
+
+      span {
+        background: #e5e5e5;
+        padding-left: $grid-gutter-width / 2;
+        padding-right: $grid-gutter-width / 2;
+        position: relative;
+        top: 10px;
+        left: ($grid-gutter-width / 2) * -1;
+
+        @media (max-width: $screen-xs-max) {
+          display: block;
+          padding-bottom: 5px;
+          top: 0;
+        }
       }
     }
   }
 
 
   // Story thumbnails
+  .thumb-wrapper {
+    @media (max-width: 480px) {
+      width: 50%;
+    }
+  }
+
   .thumb {
     -webkit-box-shadow: 2px 2px 6px 2px rgba(0, 0, 0, .2);
     box-shadow: 1px 1px 6px 2px rgba(0, 0, 0, .2);
-    display: inline-block;
-    margin-bottom: 11px;
-    margin-left: 20px;
+    margin-bottom: 20px;
     overflow: hidden;
     position: relative;
-    vertical-align: middle;
-    width: 168.75px;
-
-    @include body-prefix('.ie8') {
-      width: 168.5px;
-
-      &.featured {
-        margin-bottom: 11px;
-        margin-left: 0;
-        width: 100%;
-      }
-    }
-
-    @media (max-width: $screen-sm-max) {
-      margin-left: 15px;
-      width: 129.6px;
-    }
-
-    @media (max-width: $screen-xs-max) {
-      margin-left: 2.35%;
-      width: 31%;
-    }
-
-    @media (max-width: 480px) {
-      margin-left: 3%;
-      width: 47.75%;
-    }
 
     &.featured {
       margin-bottom: 11px;
-      margin-left: 0;
       width: 100%;
-
-      @media only screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-        margin-bottom: 12px;
-      }
-
-      @media (max-width: $screen-sm-max) {
-        margin-bottom: 12px;
-      }
-
-      @media (max-width: $screen-xs-max) {
-        width: 48%;
-      }
-
-      @media (max-width: 480px) {
-        float: none;
-        width: 100%;
-      }
-    }
-
-    &.thumb-1-m {
-      margin-left: 0;
-
-      @media (max-width: $screen-xs-max) {
-        margin-left: 2.35%;
-        width: 31%;
-      }
-
-      @media (max-width: 480px) {
-        margin-left: 3%;
-        width: 47.75%;
-      }
-    }
-
-    &.thumb-1-s {
-      @media (max-width: $screen-xs-max) {
-        margin-left: 2.35%;
-        width: 31%;
-      }
-
-      @media (max-width: 480px) {
-        margin-left: 3%;
-        width: 47.75%;
-      }
-    }
-
-    &.thumb-1-xs {
-      @media (max-width: $screen-xs-max) {
-        margin-left: 0;
-      }
-
-      @media (max-width: 480px) {
-        margin-left: 3%;
-        width: 47.75%;
-      }
-    }
-
-    &.thumb-1-xxs {
-      @media (max-width: 480px) {
-        margin-left: 0;
-      }
     }
 
     &:hover .description {
@@ -195,11 +111,13 @@
   }
 
   .home-article-1 {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     position: relative;
 
     @media (max-width: $screen-xs-max) {
-      margin-bottom: 20px;
+      -webkit-box-shadow: 0 0 0 0 transparent;
+      box-shadow: 0 0 0 0 transparent;
+      overflow: visible;
     }
 
     a {
@@ -225,7 +143,9 @@
       z-index: 4;
 
       @media (max-width: $screen-xs-max) {
+        background-color: transparent;
         color: #000;
+        display: block;
         margin-top: 6px;
         padding: 0;
         position: static;
@@ -236,6 +156,7 @@
       @media (max-width: $screen-xs-max) {
         font-size: 18px;
         line-height: 1.25em;
+        padding: 0;
       }
     }
   }
